white space deleted, small bug graph fixed

--- a/src/app/combination/combination.component.scss
+++ b/src/app/combination/combination.component.scss
@@ -1,4 +1,4 @@
 .container {
     height: 90vh;
- 
+    overflow-y: auto;
   }
