--- a/src/app/plotly-graph/plotly-graph.component.scss
+++ b/src/app/plotly-graph/plotly-graph.component.scss
@@ -3,13 +3,14 @@
     height: 90vh;
     display: flex;
     justify-content: center;
+
 }
 th{
     font-weight: 500;
   }
     table {
       margin-top: 30px;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
       width: 100%;
       border-collapse: collapse;
       text-align: center;
